--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@vercel/postgres": "^0.10.0",
     "googleapis": "^166.0.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.4",
     "next": "16.0.3",
+    "next-auth": "^5.0.0-beta.30",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "webcrypto-core": "^1.8.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
