--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.4",
     "lodash": "^4.17.21",
-    "next": "16.0.3",
+    "next": "^16.0.7",
     "next-auth": "^5.0.0-beta.30",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "webcrypto-core": "^1.8.1"
   },
   "devDependencies": {
