--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next-auth": "^5.0.0-beta.30",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
+    "swr": "^2.3.8",
     "webcrypto-core": "^1.8.1"
   },
   "devDependencies": {
