--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/lodash": "^4.17.21",
     "@vercel/postgres": "^0.10.0",
     "dotenv": "^17.2.3",
+    "google-auth-library": "^10.5.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.4",
     "lodash": "^4.17.21",
